@@ -11,6 +11,7 @@
   add uchar.h and c16rtomb, c32rtomb, mbrtoc16, mbrtoc32
   add static_assert to <assert.h>
   x86_64/memcmp.S optimization (Stefan Kanthak)
+  add consttime_memequal and explicit_memset from NetBSD
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
